; ModuleID = '/home/carl/AnghaBench/git/extr_commit-reach.c_reduce_heads_replace.c'
source_filename = "/home/carl/AnghaBench/git/extr_commit-reach.c_reduce_heads_replace.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit_list = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @reduce_heads_replace(%struct.commit_list** %0) #0 {
  %2 = alloca %struct.commit_list**, align 8
  %3 = alloca %struct.commit_list*, align 8
  store %struct.commit_list** %0, %struct.commit_list*** %2, align 8
  %4 = load %struct.commit_list**, %struct.commit_list*** %2, align 8
  %5 = load %struct.commit_list*, %struct.commit_list** %4, align 8
  %6 = call %struct.commit_list* @reduce_heads(%struct.commit_list* %5)
  store %struct.commit_list* %6, %struct.commit_list** %3, align 8
  %7 = load %struct.commit_list**, %struct.commit_list*** %2, align 8
  %8 = load %struct.commit_list*, %struct.commit_list** %7, align 8
  %9 = call i32 @free_commit_list(%struct.commit_list* %8)
  %10 = load %struct.commit_list*, %struct.commit_list** %3, align 8
  %11 = load %struct.commit_list**, %struct.commit_list*** %2, align 8
  store %struct.commit_list* %10, %struct.commit_list** %11, align 8
  ret void
}

declare dso_local %struct.commit_list* @reduce_heads(%struct.commit_list*) #1

declare dso_local i32 @free_commit_list(%struct.commit_list*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
